<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/transQuiz"
            android:title="@string/transquiz" />
        <item
            android:id="@+id/graReview"
            android:title="@string/gra_review" />
        <item
            android:id="@+id/report"
            android:title="@string/report" />
    </group>

    <item android:title="@string/level">
        <menu>
            <item
                android:id="@+id/level5"
                android:title="N5"
                android:checkable="true"
                android:enabled="false"/>
            <item
                android:id="@+id/level4"
                android:title="N4"
                android:checkable="true"
                android:checked="true"/>
            <item
                android:id="@+id/level3"
                android:title="N4"
                android:checkable="true"/>
        </menu>
    </item>

</menu>
