<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    android:gravity="center">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/rgLevel">

        <RadioButton
            android:text="@string/n5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLev5"
            android:enabled="false"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/n4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLev4"
            android:enabled="false"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/n3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLev3"
            android:enabled="false"
            android:layout_weight="1"
            android:checked="true"/>
    </RadioGroup>

    <Button
        android:text="@string/transquiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTransQuiz"
        android:onClick="btnTransOnClick"/>

    <Button
        android:text="@string/gra_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGraReview"
        android:onClick="btnGraReviewOnClick"/>
</LinearLayout>
